--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
   "name": "zlogjs-http-logger",
-  "version": "0.0.3",
-  "description": "Logs http request, and responses and can be used as a plugin for zlogjs-adapter",
+  "version": "0.0.4",
+  "description": "Log http request, and responses and can be used as a plugin for zlogjs-adapter",
   "main": "./lib/logger.js",
   "scripts": {
     "test": "node test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Emallates/zlogjs-http-logger.git"
   },
   "keywords": [
     "logger",
     "zlog",
     "zlogjs",
-    "zlogjs",
-    "logger",
     "http",
-    "http",
-    "logger"
+    "zlogjs-adapter"
   ],
+  "bugs": {
+    "url": "https://github.com/Emallates/zlogjs-http-logger/issues"
+  },
+  "homepage": "https://github.com/Emallates/zlogjs-http-logger#readme",
   "author": "zeeshan <zeeshan.emallates@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "debug": "^2.2.0",
     "on-finished": "^2.3.0",
     "on-headers": "^1.0.1"
   }
